test/bad/classes/print01.px

class Test def
    toString: String

print Test()
